fix hero on mobile

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -4,6 +4,6 @@
 }
 
 #hero-image-wrapper {
-    max-height: 40vh;
+    max-height: 43vh;
     overflow: hidden;
 }
